test/corpus/comments.txt
====================|||
Multiple Comments
====================|||

# Test
# Test2
# Test3
# Test4

---|||

(source_file
  (comment)
  (comment)
  (comment)
  (comment))

====================|||
EOF
====================|||
# Test
---|||

(source_file
  (comment))

====================|||
End of line Multiple
====================|||

x -> y # I am at the end; x
x

---|||

(source_file
  (declaration
    (identifier)
    (connection)
    (identifier))
  (comment)
  (declaration
    (identifier)))

====================|||
Inside blocks
====================|||

x: {
  x; # comment
}

---|||

(source_file
  (declaration
    (identifier)
    (block
      (declaration
        (identifier))
      (comment))))

====================|||
Block Comments
====================|||

x -> y;"""This is a
block comment
""";y

---|||

(source_file
  (declaration
    (identifier)
    (connection)
    (identifier))
  (block_comment)
  (declaration
    (identifier)))

====================|||
Top-level block comment
====================|||

"""test"""

---|||

(source_file
  (block_comment))

====================|||
Multi line top-level block comment
====================|||

"""multiline
block
comment"""

---|||

(source_file
  (block_comment))
