test/corpus/connections.txt
==================|||
Isolated valid connections
==================|||

--
->
<-
<->

---|||

(source_file
  (expression
    (connection))
  (expression
    (connection))
  (expression
    (connection))
  (expression
    (connection)))
      
==================|||
Isolated long connections
==================|||

----------
--------->
<---------
<-------->

---|||

(source_file
  (expression
    (connection))
  (expression
    (connection))
  (expression
    (connection))
  (expression
    (connection)))
      
==================|||
Invalid connection "-"
==================|||

-

---|||

(source_file
  (expression
    (identifier)))

==================|||
Invalid connection ">"
==================|||

>

---|||

(source_file
  (ERROR
    (UNEXPECTED '>')))

==================|||
Invalid connection "<"
==================|||

<

---|||

(source_file
  (ERROR
    (UNEXPECTED '\n')))

==================|||
Invalid connection "<>"
==================|||

<>

---|||

(source_file
  (ERROR
    (UNEXPECTED '>')))

==================|||
Basic
==================|||

Write Replica Canada <-> Write Replica Australia

Read Replica <- Master
Write Replica -> Master

Read Replica 1 -- Read Replica 2

---|||

(source_file
  (expression
    (identifier)
    (connection)
    (identifier))
  (expression
    (identifier)
    (connection)
    (identifier))
  (expression
    (identifier)
    (connection)
    (identifier))
  (expression
    (identifier)
    (connection)
    (identifier)))

==================|||
Connection labels
==================|||

Read Replica 1 -- Read Replica 2: Kept in sync

---|||

(source_file
  (expression
    (identifier)
    (connection)
    (identifier)
    (label)))

==================|||
Multiline shape
==================|||

a --\
  -- b
a <-\
  -- b
a --\
  -> b
a <-\
  -> b
  
---|||

(source_file
  (expression
    (identifier)
    (connection)
    (identifier))
  (expression
    (identifier)
    (connection)
    (identifier))
  (expression
    (identifier)
    (connection)
    (identifier))
  (expression
    (identifier)
    (connection)
    (identifier)))

==================|||
Repeated Connections
==================|||

Database -> S3: backup
Database -> S3
Database -> S3: backup

---|||

(source_file
  (expression
    (identifier)
    (connection)
    (identifier)
    (label))
  (expression
    (identifier)
    (connection)
    (identifier))
  (expression
    (identifier)
    (connection)
    (identifier)
    (label)))

==================|||
Connections Chaining
==================|||

# The label applies to each connection in the chain.
High Mem Instance -> EC2 <- High CPU Instance: Hosted By

---|||

(source_file
  (expression
    (identifier)
    (connection)
    (identifier)
    (connection)
    (identifier)
    (label)))
