test/corpus/docs/customization/interactive.txt
====================|||
Tooltips
====================|||

x: {tooltip: Total abstinence is easier than perfect moderation}
y: {tooltip: Gee, I feel kind of LIGHT in the head now,\nknowing I can't make my satellite dish PAYMENTS!}
x -> y

---|||

(source_file
  (declaration
    (identifier)
    (block
      (declaration
        (identifier)
        (label))))
  (declaration
    (identifier)
    (block
      (declaration
        (identifier)
        (label
          (escape)))))
  (declaration
    (identifier)
    (connection)
    (identifier)))

====================|||
Links
====================|||

x: I'm a Mac {
  link: https://apple.com
}
y: And I'm a PC {
  link: https://microsoft.com
}
x -> y: gazoontite

---|||

(source_file
  (declaration
    (identifier)
    (label)
    (block
      (declaration
        (identifier)
        (label))))
  (declaration
    (identifier)
    (label)
    (block
      (declaration
        (identifier)
        (label))))
  (declaration
    (identifier)
    (connection)
    (identifier)
    (label)))
