test/corpus/docs/getting_started/connections.txt
==============|||
Basics
==============|||

Write Replica Canada <-> Write Replica Australia

Read Replica <- Master
Write Replica -> Master

Read Replica 1 -- Read Replica 2

---|||

(source_file
  (declaration
    (identifier)
    (connection)
    (identifier))
  (declaration
    (identifier)
    (connection)
    (identifier))
  (declaration
    (identifier)
    (connection)
    (identifier))
  (declaration
    (identifier)
    (connection)
    (identifier)))

====================|||
Connection labels
====================|||

Read Replica 1 -- Read Replica 2: Kept in sync

---|||

(source_file
  (declaration
    (identifier)
    (connection)
    (identifier)
    (label)))

==============|||
Connections must reference a shape's key, not its label.
==============|||

be: Backend
fe: Frontend

# This would create new shapes
Backend -> Frontend

# This would define a connection over existing labels
be -> fe

---|||

(source_file
  (declaration
    (identifier)
    (label))
  (declaration
    (identifier)
    (label))
  (comment)
  (declaration
    (identifier)
    (connection)
    (identifier))
  (comment)
  (declaration
    (identifier)
    (connection)
    (identifier)))

==============|||
Example
==============|||

Write Replica Canada <-> Write Replica Australia

Read Replica <- Master

x -- y

super long shape id here -> super long shape id even longer here

---|||

(source_file
  (declaration
    (identifier)
    (connection)
    (identifier))
  (declaration
    (identifier)
    (connection)
    (identifier))
  (declaration
    (identifier)
    (connection)
    (identifier))
  (declaration
    (identifier)
    (connection)
    (identifier)))

==============|||
Repeated Connections
==============|||

Database -> S3: backup
Database -> S3
Database -> S3: backup

---|||

(source_file
  (declaration
    (identifier)
    (connection)
    (identifier)
    (label))
  (declaration
    (identifier)
    (connection)
    (identifier))
  (declaration
    (identifier)
    (connection)
    (identifier)
    (label)))

==============|||
Connections Chaining
==============|||

# The label applies to each connection in the chain.
High Mem Instance -> EC2 <- High CPU Instance: Hosted By

---|||

(source_file
  (comment)
  (declaration
    (identifier)
    (connection)
    (identifier)
    (connection)
    (identifier)
    (label)))

====================|||
Cycles are okay
====================|||

Stage One -> Stage Two -> Stage Three -> Stage Four
Stage Four -> Stage One: repeat

---|||

(source_file
  (declaration
    (identifier)
    (connection)
    (identifier)
    (connection)
    (identifier)
    (connection)
    (identifier))
  (declaration
    (identifier)
    (connection)
    (identifier)
    (label)))

====================|||
Referencing connections
====================|||

(x -> y)[0].style.stroke: red

---|||

(source_file
  (declaration
    (connection_reference
      (identifier)
      (connection)
      (identifier)
      (connection_identifier)
      field: (identifier)
      field: (identifier))
    (label)))
